# biot

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini
services/agent-core/: .gitignore  pyproject.toml
services/agent-core/.bolt/: conversations.db
services/agent-core/src/bolt_core/: __init__.py  agent_budget.py  agent_budget_api.py  agent_intelligence_dogfood.py  agent_intelligence_dogfood_api.py  agent_loop.py  app.py  (+242 more)
services/agent-core/tests/: runtime_security_support.py  test_acp_events.py  test_acp_stdio.py  test_acp_stdio_adversarial.py  test_acp_stdio_races.py  test_acp_stdio_response_validation.py  test_agent_budget.py  test_agent_budget_api.py  test_agent_intelligence_dogfood.py  test_agent_loop.py  test_agent_loop_context_compression.py  test_agent_loop_messages.py  test_app.py  test_app_health.py  test_app_model_gateway.py  test_approval_apply.py  test_approval_apply_api.py  test_atomic_write.py  test_background_executor.py  test_beta_reliability_common.py  test_builder_engine.py  test_checkpoint.py  test_checkpoint_api.py  test_chinese_interaction_eval.py  test_code_map_index.py  test_command_security.py  test_conflict_resolution.py  test_context_builder.py  test_context_compaction.py  test_context_compressor.py  test_conversation.py  test_crash_recovery.py  test_crash_recovery_api.py  test_credential_lifecycle.py  test_credential_lifecycle_api.py  test_credential_store.py  test_data_migration.py  test_data_migration_api.py  test_decision_memory.py  test_decision_memory_api.py  (+208 more)
(+760 files in other folders)
